2009-01-29  John W. Eaton  <jwe@octave.org>

	* ov-base-scalar.cc (octave_base_scalar<ST>::is_true (void) const):
	Error if scalar is NaN.
	* ov-base-mat.cc (octave_base_matrix<MT>::is_true (void) const):
	Likewise, if any element of matrix is NaN.
	* ov-cell.cc (octave_cell::is_true): New function.
	* Cell.h (Cell::any_element_is_nan): New function.

2009-01-29  Jaroslav Hajek  <highegg@gmail.com>

	* pr-output.cc:
	(void octave_print_internal (..., const DiagMatrix& m,...),
	(void octave_print_internal (..., const ComplexDiagMatrix& m,...),
	(void octave_print_internal (..., const FloatDiagMatrix& m,...),
	(void octave_print_internal (..., const FloatComplexDiagMatrix& m,...)):
	New functions.
	* pr-output.h: Declare them.
	* ov-base-diag.cc (octave_base_diag::print_raw): Call
	octave_print_internal.

2009-01-28  John W. Eaton  <jwe@octave.org>

	* Makefile.in (install, uninstall): Handle SHLLIBPRE and SHLBINPRE
	library prefixes.  From Marco Atzeri <marco_atzeri@yahoo.it>.

2008-01-28  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/regexp.cc (octregexp_list): Don't break for zero
	length match, but rather advance the index by one character and
	try again.

2009-01-28  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lookup.cc (Flookup): Fix doc string.

2009-01-27  John W. Eaton  <jwe@octave.org>

	* load-path.cc (Fcommand_line_path): Rename from Fcommandlinepath.

2009-01-27 Ben Abbott <bpabbott@mac.com>

	* graphics.cc (convert_position): Handle character units.
	(default_axes_tick, default_figure_papersize,
	default_figure_paperposition): New functions.
	* graphics.h.in (class figure::properties): Use them to
	initialize papersize, paperposition, xtick, ytick, and ztick
	properties.

2009-01-27  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/qr.cc (Fqr): Treat empty matrices correctly.

2009-01-26  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* display.cc (display_info::init): Use double instead of CGFloat.